# MCD

./: .gitignore  README.md  delete_cache.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup_project_structure.py
apps/: train.py
configs/: training_settings.yaml
examples/: example1.py  example2.py  simple_detection.py
lib/common/: config.py
output/output_one_image/image1/: centroids.csv
src/asoct_mcd/classification/: __init__.py  factories.py  interfaces.py
src/asoct_mcd/classification/implementations/: __init__.py  cell_classifier.py
src/asoct_mcd/image_processing/: __init__.py  image_operations.py  mask_operations.py
src/asoct_mcd/model_implementations/: __init__.py
src/asoct_mcd/model_implementations/sam_vit_b/: __init__.py  config.py  wrapper.py
src/asoct_mcd/model_implementations/spatial_attention/: __init__.py  config.py  wrapper.py
src/asoct_mcd/model_management/: __init__.py  config.py  factory.py  interfaces.py  loaders.py  registry.py  wrappers.py
src/asoct_mcd/model_management/implementations/: __init__.py  pytorch_wrapper.py  sam_wrapper.py
src/asoct_mcd/pipeline/: __init__.py  builder.py  config.py  core.py  default_config.yaml  pipeline.py  result.py  results.py  wrappers.py
src/asoct_mcd/preprocessing/: __init__.py  converters.py  denoisers.py  factories.py  interfaces.py  pipeline.py
src/asoct_mcd/preprocessing/implementations/: __init__.py  converters.py  denoisers.py
src/asoct_mcd/prompt_generation/: __init__.py  factories.py  interfaces.py
src/asoct_mcd/prompt_generation/implementations/: __init__.py  i2acp.py
src/asoct_mcd/segmentation/: __init__.py  factories.py  interfaces.py
src/asoct_mcd/segmentation/implementations/: __init__.py  trained.py  zero_shot.py
src/asoct_mcd/threshold_methods/: __init__.py  factories.py  interfaces.py
src/asoct_mcd/threshold_methods/implementations/: __init__.py  thresholding.py
tests/: test_preprocessing.py
tests/integration/: test_all.py  test_pipeline.py  test_preprocessing.py  test_segment.py
tests/integration/thresholding/: compare_results.py  test_thresholding.py  threshold_get_cell_old.py  threshold_get_cell_re.py
tests/unit/: test_preprocessing.py  test_prompt_generation.py  test_segmentation.py  test_threshold_methods.py
